--- a/subeng/aboutus.html
+++ b/subeng/aboutus.html
@@ -62,9 +62,9 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
+						<li><a href="location.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
@@ -72,106 +72,87 @@
 		</div>
 
 		<!-- About section -->
-		
-		
-		<!-- Feature section -->
-		
-		<!-- <div class="tlinks">Collect from <a href="http://www.cssmoban.com/">网页模板</a></div> -->
-
-		<!-- Video section -->
-		
-		<!-- Menu section -->
-		<section id="menu" class="parallax-section">
+		<section id="about-head" class="parallax-section">
 			<div class="container">
 				<div class="row">
-
-					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
-						<div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-							<h2>Food Menu</h2>
-							<h4>we have special menus</h4>
-						</div>
-					</div>
-
-					<div class="col-md-6 col-sm-12">
-						<div class="media wow fadeInUp" data-wow-delay="0.6s">
-							<div class="media-object pull-left">
-								<img src="../images/gallery-img13.jpg" class="img-responsive" alt="Food Menu">
-								<!-- <span class="menu-price">$24</span> -->
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Chief Recommend</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
-							</div>
-						</div>
-
-						<div class="media wow fadeInUp" data-wow-delay="0.8s">
-							<div class="media-object pull-left">
-								<img src="../images/gallery-img2.png" class="img-responsive" alt="Food Menu">
-								<!-- <span class="menu-price">$36</span> -->
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Seafood</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
-							</div>
-						</div>
-
-						<div class="media wow fadeInUp" data-wow-delay="1.0s">
-							<div class="media-object pull-left">
-								<img src="../images/drink2.png" class="img-responsive" alt="Food Menu">
-								<!-- <span class="menu-price">$24</span> -->
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Drinks</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
+					<div class="col-md-12">
+						<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
+							<div class="wow fadeInUp" data-wow-delay="0.3s">
+								<h2>Our <span class="orange">Restaurant</span></h2>
+								<h4>we have special foods</h4>
 							</div>
 						</div>
 					</div>
-
-					<div class="col-md-6 col-sm-12">
-						<div class="media wow fadeInUp" data-wow-delay="1.2s">
-							<div class="media-object pull-left">
-								<img src="../images/gallery-img4.png" class="img-responsive" alt="Food Menu">
-								<!-- <span class="menu-price">$32</span> -->
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Seafood Rcommend</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
-							</div>
-						</div>
-
-						<div class="media wow fadeInUp" data-wow-delay="1.4s">
-							<div class="media-object pull-left">
-								<img src="../images/special1.jpg" class="img-responsive" alt="Food Menu">
-								<!-- <span class="menu-price">$64</span> -->
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Special Food</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
-							</div>
-						</div>
-
-						<div class="media wow fadeInUp" data-wow-delay="1.6s">
-							<div class="media-object pull-left">
-								<img src="../images/dessert1.png" class="img-responsive" alt="Food Menu">
-								<!-- <span class="menu-price">$45</span> -->
-							</div>
-							<div class="media-body">
-								<h3 class="media-heading">Dessert</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et.</p>
-							</div>
-						</div>
-					</div>
-
 				</div>
 			</div>
 		</section>
 		
-		<!-- Team section -->
+		<section class="parallax-section about-sec">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-sm-12">
+						<div class="wow fadeInUp" data-wow-delay="0.3s">
+							<img src="../images/building2.jpg" class="img-responsive"/>
+						</div>
+					</div>
+					<div class="col-sm-6 col-sm-12">
+						<div class="wow fadeInUp" data-wow-delay="0.4s">
+							<p class="text-muted">
+								HuaiKhwang Seafood Restaurant is established in 2018. Our First outlet is located at Ratchada Road near HuaiKhwang MRT station. Our seafood preparation and cooking is based on Hong Kong, Malaysia, Singapore and Thai flavour suitable for both local and overseas patrons. 
+							</p>
+							<p class="text-muted">
+								We emphasise on serving our patron with fresh, delicious and quality seafood, which they can pick and choose from a wide range of live seafood stocks which are housed in over 30 fish tanks  in our restaurant. 
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		
-		<!-- Gallery section -->
+		<section id="mid-div" class="parallax-section about-sec">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-sm-12">
+						<div class="wow fadeInUp" data-wow-delay="0.4s">
+							<p class="text-muted">
+								Seafood such as lobster, Alaska Crab, shellfish, clams and fish is procured live, selectively from reliable sources.
+							</p>
+							<p class="text-muted">
+								Our seafood is prepared by a group of very dedicated and professional cook led by International and local Celebrity Chef whose burning passion and pride is to serve patron with special, breakthrough seafood experience that is unique and first class, unlike others in the region. 
+							</p>
+						</div>
+					</div>
+					<div class="col-sm-6 col-sm-12">
+						<div class="wow fadeInUp" data-wow-delay="0.4s">
+							<img src="../images/chief%20recommend/SEA%20FOOD-341.jpg" class="img-responsive"/>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		
-		<!-- Contact section -->
-		
+		<section class="parallax-section about-sec">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-6 col-sm-12">
+						<div class="wow fadeInUp" data-wow-delay="0.4s">
+							<img src="../images/home-bg-slideshow2.jpg" class="img-responsive"/>
+						</div>
+					</div>
+					<div class="col-sm-6 col-sm-12">
+						<div class="wow fadeInUp" data-wow-delay="0.6s">
+							<p class="text-muted">
+								Through our original yet innovative recipe right from preparation, flavouring, arrangement to serving, each dish is carefully designed to  tease and entice every patron's palate for their utmost, unforgettable seafood satisfaction at HuaiKhwang Restaurant. 
+							</p>
+							<p class="text-muted">
+								With our EXCELLENT SERVICE, FRESH SEAFOOD and VALUE FOR PATRON’S dollar, HuaiKhwang Restaurant welcomes you to an unforgettable, mouth-watering and satisfying seafood experience with us.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- //About Us -->
 		<!-- Footer section -->
 		<footer>
 			<div class="container">
