--- a/subeng/contact.html
+++ b/subeng/contact.html
@@ -62,9 +62,9 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
+						<li><a href="location.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
@@ -78,7 +78,7 @@
 
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-							<h2>Say hello</h2>
+							<h2>Say Hello</h2>
 							<h4>we are always ready to serve you!</h4>
 						</div>
 						<div class="contact-form wow fadeInUp" data-wow-delay="0.7s">
