--- a/subeng/index_eng.html
+++ b/subeng/index_eng.html
@@ -29,8 +29,8 @@
 		<link rel="stylesheet" type="text/css" href="../css/addition.css"/>
 		
 		<!-- fonts -->
-		<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-		<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'>
+		<!-- <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'> -->
+		<!-- <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,600' rel='stylesheet' type='text/css'> -->
 
 	</head>
 	<!-- //head -->
@@ -62,14 +62,15 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
+						<li><a href="location.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
-				</div>F
+				</div>
 			</div>
 		</div>
+
 		<!-- About section -->
 		<section id="about" class="parallax-section">
 			<div class="container">
@@ -112,26 +113,16 @@
 					</div>
 
 					<div id="intro" class="wow fadeInUp col-md-3 col-sm-12" data-wow-delay="0.9s">
-						<h2>Seafood</h2>
-						<p>The HuaiKhwang Seafood was founded in 2018.</p>
+						<h2>Our <span class="orange">Seafood</span></h2>
+						<p>Huai Khwang Seafood Restaurant is established in 2018.</p>
 						<p>
-						 The first store opened in the HuaiKhwang area of Bangkok, specializing in Thai specialties and snacks. 
-						 With the concept of delicious, fresh and exquisite cuisine, we have broken the inherent eating habits and made dining more casual. 
-						 </p>
-						 <p>
-						 We select fresh seafood caught in the deep sea of Thailand on the same day and have been thoroughly cleaned.
-						 </p>
-		
-						<!-- <p>Steak House is free HTML website template for everyone. Please inform your friends about <a rel="nofollow"
-							 href="#/free-templates" target="_blank">Tooplate</a> site.</p>
-						<p>Vestibulum id iaculis nisl. Pellentesque nec tortor sagittis, scelerisque ante at, sollicitudin leo. Vivamus
-							pulvinar a justo vel lobortis.</p> -->
-
-						<!-- <ul>
-							<li>Donec fringilla ipsum</li>
-							<li>Integer nec urna</li>
-							<li>Curabitur porta</li>
-						</ul> -->
+						Our seafood preparation and cooking is based on Hong Kong, Malaysia, Singapore and Thai flavour suitable for both local and overseas patrons.
+						</p>
+						<ul>
+							<li>EXCELLENT SERVICE</li>
+							<li>FRESH SEAFOOD</li>
+							<li>VALUE FOR PATRON'S DOLLAR</li>
+						</ul>
 					</div>
 
 				</div>
@@ -144,7 +135,7 @@
 				<div class="row">
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-							<h2>HuaiKhwang Seafood</h2>
+							<h2>HuaiKhwang <span class="orange">Seafood</span></h2>
 							<h4>We offer a wide range of foods for you to choose from.</h4>
 						</div>
 					</div>
@@ -158,7 +149,7 @@
 							</div>
 							<img src="../images/gallery-img2.png" width="300px" />
 							<h3>SPECIAL DISH</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+							<p>We select fresh seafood caught in the deep sea of Thailand on the same day and have been thoroughly cleaned.</p>
 						</div>
 					</div>
 
@@ -169,7 +160,7 @@
 							</div>
 							<img src="../images/drinks.png" width="300px" />
 							<h3>SPECIAL DRINKS</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+							<p>The special drinks produced by this restaurant taste both mellow and sweet.</p>
 						</div>
 					</div>
 
@@ -180,7 +171,7 @@
 							</div>
 							<img src="../images/gallery-img2.jpg" width="300px" />
 							<h3>RECOMMEND</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus.</p>
+							<p>Spicy, sweet, sour, salty, each taste is on the "tongue", but no one can dominate the taste buds.</p>
 						</div>
 					</div>
 
@@ -206,16 +197,15 @@
 				</div>
 			</div>
 		</section>
-
+		
 		<!-- Menu section -->
 		<section id="menu" class="parallax-section">
 			<div class="container">
 				<div class="row">
-
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.3s">
 							<a href="menu.html">
-								<h2>Food Menu</h2>
+								<h2>Food <span class="orange">Menu</span></h2>
 							</a>
 							<h4>we have special menus</h4>	
 						</div>
@@ -307,11 +297,6 @@
 			</div>
 		</section>
 
-		<!-- Team section -->
-		
-		<!-- Gallery section -->
-		
-		<!-- Contact section -->
 		
 		<!-- Footer section -->
 		<footer>
