--- a/subeng/location.html
+++ b/subeng/location.html
@@ -62,9 +62,9 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
+						<li><a href="location.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
@@ -80,8 +80,8 @@
 
 					<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 						<div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-							<h2>Why Choose Us?</h2>
-							<h4>Steak House HTML CSS Template</h4>
+							<h2><span class="orange">Where</span> is Our Restaurant?</h2>
+							<h4>The best location in HuaiKhwang area.</h4>
 						</div>
 					</div>
 
