--- a/subeng/menu.html
+++ b/subeng/menu.html
@@ -62,9 +62,9 @@
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index_eng.html" class="smoothScroll">Home</a></li>
-						<li><a href="features.html" class="smoothScroll">Features</a></li>
-						<li><a href="aboutus.html" class="smoothScroll">About Us</a></li>
+						<li><a href="aboutus.html" class="smoothScroll">About</a></li>
 						<li><a href="menu.html" class="smoothScroll">Menu</a></li>
+						<li><a href="location.html" class="smoothScroll">Location</a></li>
 						<li><a href="contact.html" class="smoothScroll">Contact</a></li>
 					</ul>
 				</div>
@@ -87,12 +87,10 @@
 		<section id="gallery" class="parallax-section">
 			<div class="container">
 				<div class="row">
-
 					<div class="col-md-12">
-
 						<div class="col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10">
 							<div class="wow fadeInUp section-title" data-wow-delay="0.3s">
-								<h2>Food Menu</h2>
+								<h2>Food <span class="orange">Menu</span></h2>
 								<h4>we have special foods</h4>
 							</div>
 						</div>
